# OrangeModels

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Classes/: DXPlay.sc  SMEmu.sc  SQArp.sc
HelpSource/Classes/: DXPlay.schelp  SMEmu.schelp  SQArp.schelp
src/: DXPlay.cpp  DXPlay.hpp  DXPlayUGen.cpp  SMEmu.hpp  SMEmuUGen.cpp  SQArp.hpp  SQArpUGen.cpp
